[gd_scene load_steps=9 format=3 uid="uid://c7paribay8guo"]

[ext_resource type="Script" path="res://_scripts/scene_functionality/level_select.gd" id="1_1k8qr"]
[ext_resource type="FontFile" uid="uid://dseoifk7fcmkk" path="res://_resources/fonts/Roboto-Black.ttf" id="2_nwaxe"]
[ext_resource type="Theme" uid="uid://jq8h648bmy23" path="res://_resources/fonts/blank_button.tres" id="3_sptij"]
[ext_resource type="FontFile" uid="uid://dintgdp6unnqh" path="res://_resources/fonts/Roboto-Medium.ttf" id="3_tlrgj"]
[ext_resource type="Theme" uid="uid://dcdqp18uxr5af" path="res://_resources/fonts/button_theme.tres" id="5_trr54"]

[sub_resource type="LabelSettings" id="LabelSettings_bf6bo"]
font = ExtResource("2_nwaxe")
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_stbnq"]
font = ExtResource("3_tlrgj")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_xu80c"]
font = ExtResource("2_nwaxe")
font_size = 160

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_1k8qr")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -267.0
offset_top = -303.0
offset_right = 267.0
offset_bottom = -208.0
grow_horizontal = 2
text = "LEVEL SELECT"
label_settings = SubResource("LabelSettings_bf6bo")

[node name="Subtitle" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -267.0
offset_top = 92.0
offset_right = 267.0
offset_bottom = 187.0
grow_horizontal = 2
text = "HOLD 'SHIFT' TO MOVE THROUGH LEVELS FASTER"
label_settings = SubResource("LabelSettings_stbnq")
horizontal_alignment = 1

[node name="LevelTiles" type="Control" parent="."]
anchors_preset = 0

[node name="1" type="Label" parent="LevelTiles"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)
text = "1"
label_settings = SubResource("LabelSettings_xu80c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="LevelTiles/1"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LevelButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_sptij")

[node name="RightButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -123.0
offset_right = 250.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_sptij")
theme_override_font_sizes/font_size = 200
text = ">"
icon_alignment = 1
expand_icon = true

[node name="LeftButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -123.0
offset_right = 50.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(-1, 1)
theme = ExtResource("3_sptij")
theme_override_font_sizes/font_size = 200
text = ">"
icon_alignment = 1
expand_icon = true

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -564.0
offset_top = 233.0
offset_right = -262.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_trr54")
theme_override_font_sizes/font_size = 50
text = "MAIN MENU"
